# learn

./: .clang-format  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
ai-ml/: README.md
lesson_01_foundations/: concepts.py  exercises.py
lesson_02_first_graph/: concepts.py  exercises.py
lesson_03_multi_node/: concepts.py  solutions.py
lesson_04_routing/: concepts.py  exercises.py  solutions.py
lesson_05_reducers/: concepts.py  solutions.py
lesson_06_llm/: concepts.py  exercises.py  solutions.py
lesson_07_errors/: concepts.py  exercises.py  solutions.py
lesson_08_parallel/: solutions.py
lesson_09_checkpoints/: concepts.py  solutions.py
lesson_10_capstone/: pipeline.py
programming/c/: Makefile  README.md
programming/c/01-basics/: README.md  boolean.c  hello.c  operators.c  types.c  variables.c
programming/c/02-control-flow/: README.md  fizzbuzz.c
programming/c/03-functions/: README.md
programming/c/04-pointers/: README.md
programming/c/05-strings/: README.md
programming/c/06-structs/: README.md
programming/c/07-memory/: README.md
programming/c/08-file-io/: README.md
programming/c/09-preprocessor/: README.md
programming/c/10-data-structures/: README.md
programming/c/11-projects/: Makefile  README.md
programming/c/common/: common.mk  debug.h
programming/c/w3/: 1 - presentation.c  2 - version.c  3 - reverse.c  4 - area.c  5 - circle.c  6 - sizeof.c  7 - struct.c
programming/python/: Makefile  README.md
tests/: test_lesson_02.py  test_lesson_03.py  test_lesson_04.py  test_lesson_05.py  test_lesson_06.py
(+159 files in other folders)
